--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,9 @@ parts/
 sdist/
 var/
 wheels/
-share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
 
 # Virtual environments
 .env
@@ -31,9 +29,6 @@ ENV/
 env.bak/
 venv.bak/
 
-# UV specific
-.uv/
-
 # IDE
 .vscode/
 .idea/
@@ -41,25 +36,25 @@ venv.bak/
 *.swo
 *~
 
-# OS
+# Temporary files
+*.tmp
+*.temp
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
-# Environment variables
-.env
-.env.local
-.env.*.local
+# Ignore manager node map
+**/extension-node-map.json
+**/.temp_extension-node-map.json
+data/extension-node-map.json
+data/.temp_extension-node-map.json
+
+# Build state files
+data/.update_state.json
+
+# Test files
+test_*.json
+*_test.json
 
 # Logs
 *.log
 logs/
-
-# Temporary files
-*.tmp
-*.temp
-.cache/
