Fix: Implement concurrency control to prevent API rate limiting
This commit fixes a critical bug where Phase 2 and Phase 3 batch processing
created all tasks simultaneously, ignoring the concurrency parameter and
triggering registry rate limits.

## Problem

Before this fix, with checkpoint_interval=500 and concurrency=1:
- Phase 2/3 created 500 concurrent tasks at once via asyncio.gather()
- Resulted in ~500 simultaneous API requests
- Triggered rate limits: ~150 failures (~9% error rate) on full metadata override
- Error: "Rate limited for package@version after 5 attempts"

## Root Cause

Both _phase2_fetch_versions() and _phase3_fetch_metadata() used:
```python
tasks = [create_task(...) for all nodes in batch]
await gather(*tasks)  # All 500 concurrent!
```

The concurrency parameter was only respected in Phase 1, not Phases 2/3.

## Solution

Implemented sequential group processing (Solution 2 from analysis):
```python
# Process batch in groups of \`concurrency\` to respect rate limits
for j in range(0, len(batch), self.concurrency):
    group = batch[j:j+self.concurrency]
    tasks = [create_task(...) for item in group]
    await gather(*tasks)  # Only N concurrent
```

This approach:
- Only creates N tasks at a time (memory efficient)
- Respects concurrency parameter precisely
- Maintains existing checkpoint logic
- Simple, elegant implementation (one nested loop per phase)

## Test Results

Full metadata override test (1707 nodes):
- Before: ~150 failures (~9%), 3-4 min with errors
- After: 0 failures (0%), 25 min with concurrency=1 ✅
- Per-node average: 0.86s (sequential as expected)
- No rate limit warnings in logs

## Additional Improvements

1. Smart version detection: Only fetch versions if latest_version changed
   or last checked >24h ago (reduces Phase 2 processing significantly)

2. Metadata override mode: New --metadata-override flag to force refresh
   all metadata (recovery/testing mode)

3. Balanced production settings: Updated workflow to use co

--- a/.github/workflows/update_registry.yml
+++ b/.github/workflows/update_registry.yml
@@ -15,6 +15,16 @@ on:
         required: false
         type: boolean
         default: false
+      metadata_override:
+        description: 'Force refresh all metadata (recovery mode)'
+        required: false
+        type: boolean
+        default: false
+      max_versions:
+        description: 'Number of versions to fetch metadata for'
+        required: false
+        type: number
+        default: 1
   schedule:
     - cron: '0 2 * * *'  # 2 AM UTC daily
 
@@ -125,29 +135,35 @@ jobs:
       - name: Run incremental registry update
         env:
           FORCE_REBUILD: ${{ github.event.inputs.force_full_rebuild || 'false' }}
+          METADATA_OVERRIDE: ${{ github.event.inputs.metadata_override || 'false' }}
+          MAX_VERSIONS: ${{ github.event.inputs.max_versions || '1' }}
           PYTHONPATH: ${{ github.workspace }}/src
         run: |
           cd src
+
+          # Build command with common parameters
+          # Balanced settings: 5 concurrent requests = ~5 req/s (well below 10-15 req/s limit)
+          # Estimated time: ~5 min for full metadata override, ~2 min for normal incremental
+          COMMON_ARGS="--data-dir ../data \
+            --schema-config ../config/output_schema.toml \
+            --concurrency 5 \
+            --checkpoint-interval 3000 \
+            --rate-limit-delay 0.1 \
+            --max-retries 3 \
+            --max-versions $MAX_VERSIONS"
+
+          # Add metadata override if enabled
+          if [ "$METADATA_OVERRIDE" = "true" ]; then
+            COMMON_ARGS="$COMMON_ARGS --metadata-override"
+            echo "⚠️  Metadata override enabled (force refresh)"
+          fi
+
           if [ "$FORCE_REBUILD" = "true" ]; then
             echo "🔄 Running FULL rebuild (forced)"
-            uv run --no-sources python update_registry.py \
-              --data-dir ../data \
-              --schema-config ../config/output_schema.toml \
-              --force-full \
-              --concurrency 1 \
-              --checkpoint-interval 500 \
-              --rate-limit-delay 0.5 \
-              --max-retries 5
+            uv run --no-sources python update_registry.py $COMMON_ARGS --force-full
           else
             echo "⚡ Running INCREMENTAL update"
-            uv run --no-sources python update_registry.py \
-              --data-dir ../data \
-              --schema-config ../config/output_schema.toml \
-              --incremental \
-              --concurrency 1 \
-              --checkpoint-interval 500 \
-              --rate-limit-delay 0.5 \
-              --max-retries 5
+            uv run --no-sources python update_registry.py $COMMON_ARGS --incremental
           fi
 
       - name: Validate data integrity
